@@ -1,4 +1,5 @@
-1/3/11 #3202, sim-sharing changes related to Swing controls
+1/11/12 subclass SimSharingPiccoloModule and add userComponents for tabs
+1/3/12 #3202, sim-sharing changes related to Swing controls
 12/2/11 move sim-sharing string literals to BCESimSharing
 #3136, use sim-sharing string constants in balancing-chemical-equations
 # 1.00.08 (58369) Nov 5, 2011
